<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".setting_list">

    <TextView
        android:id="@+id/SETTINGS"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/colorLightGreen"
        android:gravity="center_vertical"
        android:text="     SETTINGS"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/to_mod_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/icons_pwd_45"
        android:drawableRight="@drawable/icons_right_18"
        android:fontFamily="monospace"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/mod_pwd"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/SETTINGS"
        tools:layout_editor_absoluteX="0dp"
        android:layout_gravity="start" />

    <Button
        android:id="@+id/to_mod_emailadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="12dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/icons_emailadd_45"
        android:drawableRight="@drawable/icons_right_18"
        android:fontFamily="monospace"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/mod_emailadd"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/to_mod_pwd"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icon_color"
        android:fontFamily="monospace"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/log_out0"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>